tests/ui/inference/issue-72690.stderr
error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:7:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:7:22
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL -     String::from("x".as_ref());
LL +     String::from(<str as AsRef<T>>::as_ref("x"));
   |

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:12:9
   |
LL |     |x| String::from("x".as_ref());
   |         ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:12:26
   |
LL |     |x| String::from("x".as_ref());
   |                          ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL -     |x| String::from("x".as_ref());
LL +     |x| String::from(<str as AsRef<T>>::as_ref("x"));
   |

error[E0283]: type annotations needed for `&_`
  --> $DIR/issue-72690.rs:17:9
   |
LL |     let _ = "x".as_ref();
   |         ^       ------ type must be known at this point
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: consider giving this pattern a type, where the type for type parameter `T` is specified
   |
LL |     let _: &T = "x".as_ref();
   |          ++++

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:21:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:21:22
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL -     String::from("x".as_ref());
LL +     String::from(<str as AsRef<T>>::as_ref("x"));
   |

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:28:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:28:22
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL -     String::from("x".as_ref());
LL +     String::from(<str as AsRef<T>>::as_ref("x"));
   |

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:37:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:37:22
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL -     String::from("x".as_ref());
LL +     String::from(<str as AsRef<T>>::as_ref("x"));
   |

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:46:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:46:22
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL -     String::from("x".as_ref());
LL +     String::from(<str as AsRef<T>>::as_ref("x"));
   |

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:53:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:53:22
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL -     String::from("x".as_ref());
LL +     String::from(<str as AsRef<T>>::as_ref("x"));
   |

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:62:5
   |
LL |     String::from("x".as_ref());
   |     ^^^^^^ cannot infer type for reference `&_`
   |
   = note: multiple `impl`s satisfying `String: From<&_>` found in the `alloc` crate:
           - impl From<&String> for String;
           - impl From<&str> for String;

error[E0283]: type annotations needed
  --> $DIR/issue-72690.rs:62:22
   |
LL |     String::from("x".as_ref());
   |                      ^^^^^^
   |
   = note: multiple `impl`s satisfying `str: AsRef<_>` found in the following crates: `core`, `std`:
           - impl AsRef<ByteStr> for str;
           - impl AsRef<OsStr> for str;
           - impl AsRef<Path> for str;
           - impl AsRef<[u8]> for str;
           - impl AsRef<str> for str;
help: try using a fully qualified path to specify the expected types
   |
LL -     String::from("x".as_ref());
LL +     String::from(<str as AsRef<T>>::as_ref("x"));
   |

error: aborting due to 17 previous errors

For more information about this error, try `rustc --explain E0283`.
